Fixing spacing on the yes/no inline confirmation prompt

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -865,9 +865,12 @@ a.slink{
 .red-confirm{
   color: red;
   font-size: 0.8em;
+  margin-right: 7px;
 }
 .red-confirm a{
-  margin-left: 7px;
+  position: initial;
+  margin-right: 7px;
+  margin-left: 2px;
 }
 #post-source{
   display: none;
